Update git ignore and other files

--- a/storage/app/private/website-build-development/tekmountain-com/src/app.html
+++ b/storage/app/private/website-build-development/tekmountain-com/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 	  <title>TekMountain.com</title>
-	  <link rel='canonical' href='https://local.tekmountain.com'>
+	  <link rel='canonical' href='tekmountain-com-dev.netlify.app'>
 	  %sveltekit.head%
 	</head>
 	<body>
